--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pyfiglet = "^1.0.2"
 toml = "^0.10.2"
 pyyaml = "^6.0.1"
 psycopg2 = "^2.9.9"
+pyperclip = "^1.9.0"
 
 
 [tool.poetry.group.dev.dependencies]
