Add headless mode support and env configuration
Updated `compose.yml` to include `.env` file, added `CHATGPT_HEADLESS` to `.env.example`, and expanded README documentation. Modified `main.py` and browser initialization to support running in headless mode, enhancing automation capabilities.

--- a/compose.yml
+++ b/compose.yml
@@ -8,6 +8,8 @@ services:
         build: .
         volumes:
             - ./scripts/entrypoint.sh:/usr/src/app/entrypoint.sh
+        env_file:
+            - .env
         entrypoint: ["/usr/src/app/entrypoint.sh"]
         networks:
             - dcp
