--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ toml = "^0.10.2"
 pyyaml = "^6.0.1"
 psycopg2 = "^2.9.9"
 pyperclip = "^1.9.0"
-
+chatgpt-scraper-lib = {path = "./lib/chatgpt-scraper-lib", develop = false}
 
 [tool.poetry.group.dev.dependencies]
 python-dotenv = "^1.0.1"
