Update compose and Docker configurations
Updated compose.yml to use environment variables directly and to ensure compatibility with Apple Silicon. Dockerfile now installs Google Chrome and uses Python 3.9.18-slim. Added CHATGPT system and user prompts to main.py arguments, updated dependencies, and enhanced README with setup instructions.

--- a/compose.yml
+++ b/compose.yml
@@ -1,8 +1,17 @@
 services:
     chatgpt-scraper:
         build: .
+        container_name: chatgpt-scraper
+        image: chatgpt-scraper:latest
         volumes:
             - ./scripts/entrypoint.sh:/usr/src/app/entrypoint.sh
-        env_file:
-            - .env
+        environment:
+            - CHATGPT_SYSTEM_PROMPT=${CHATGPT_SYSTEM_PROMPT}
+            - CHATGPT_USER_PROMPTS=${CHATGPT_USER_PROMPTS}
+            - TEST_ACCOUNTS=${TEST_ACCOUNTS}
+            - CHATGPT_ACCOUNT=${CHATGPT_ACCOUNT}
+            - CHATGPT_TEMPORARY_CHAT=${CHATGPT_TEMPORARY_CHAT}
+            - CHATGPT_HEADLESS=${CHATGPT_HEADLESS}
+            - LOG_LEVEL=${LOG_LEVEL}
+        platform: linux/amd64 # Use Rosetta to run on Apple Silicon
         entrypoint: ["/usr/src/app/entrypoint.sh"]
