Add new environment variables for system and user prompts
Updated the .env.example file to include CHATGPT_SYSTEM_PROMPT and CHATGPT_USER_PROMPTS variables. These additions will help configure prompts directly through environment settings.

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,7 @@ TEST_ACCOUNTS=
 CHATGPT_ACCOUNT=
 CHATGPT_TEMPORARY_CHAT=
 CHATGPT_HEADLESS=
+CHATGPT_SYSTEM_PROMPT=
+CHATGPT_USER_PROMPTS=
 
 LOG_LEVEL=info
